--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,110 @@
 ---
-title: Le Wagon Middleman boilerplate
+title: AirBnB Clone
 ---
+<!-- Your banner code -->
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('images/background.jpg');">
+  <div class="banner-content">
+    <h1>Some Stuff</h1>
+    <p>Very cool stuff, useful and smart</p>
+    <%= link_to "Our team", "team.html", class: "btn btn-primary btn-lg" %>
+  </div>
+</div>
+<!-- Your features code -->
+<div class="features text-center padded">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <img src="images/globe.png" alt="">
+        <h2>Discover the world</h2>
+        <p>The earth is your new home.</p>
+      </div>
+      <div class="col-md-3">
+        <img src="images/dollar.png" alt="">
+        <h2>Pay online</h2>
+        <p>No cash issues anymore.</p>
+      </div>
+      <div class="col-md-3">
+        <img src="images/beer.png" alt="">
+        <h2>Meet people</h2>
+        <p>Discover new culture and lifestyle.</p>
+      </div>
+      <div class="col-md-3">
+        <img src="images/heart.png" alt="">
+        <h2>Share and love</h2>
+        <p>Join a community you will love.</p>
+      </div>
+    </div>
+  </div>
+</div>
 
-<div class="welcome text-center padded">
-  <h1>Welcome to Middleman</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p>
+<!-- Your Next trip code -->
+<div class="cards text-center padded">
+  <h2>Your next trip</h2>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-paris.jpg'); background-size: cover">
+          <span>Paris</span>
+          <img src="images/seb.jpg" class="avatar" alt="">
+          <h3>Seb's home</h3>
+          <p>Charming room with patio</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-brussels.jpeg'); background-size: cover">
+          <span>Brussels</span>
+          <img src="images/anne.jpg" class="avatar" alt="">
+          <h3>Anne's home</h3>
+          <p>Lovely house</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-london.jpeg'); background-size: cover">
+          <span>London</span>
+          <img src="images/romain.jpeg" class="avatar" alt="">
+          <h3>Romain's home</h3>
+          <p>Nice flat in Piccadilly</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Your newsletter code -->
+<div class="container">
+  <div class="row">
+    <div class="col-md-4 col-xs-12 col-md-offset-4">
+      <div class="newsletter padded text-center">
+        <h2>Get news from us</h2>
+        <p>Leave us your mail and get news from us</p>
+        <form action="#" class="form-inline">
+          <input type="text" class="form-control" placeholder="bob@gmail.com">
+          <input type="submit" value="Subscribe" class="btn btn-primary">
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Your footer code -->
+
+<div class="map">
+  <div id="map" style="width: 100%; height: 400px;"></div>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+  <script type="text/javascript">
+  var myLatlng = new google.maps.LatLng(48.8655909, 2.378983);
+  var myOptions = {
+    zoom: 16,
+    center: myLatlng,
+    scrollwheel: false,
+    mapTypeId: google.maps.MapTypeId.ROADMAP,
+    styles: [] // TODO: replace [] by array from https://snazzymaps.com/
+  };
+  var map = new google.maps.Map(document.getElementById('map'), myOptions);
+  var marker = new google.maps.Marker({
+    position: myLatlng,
+    map: map,
+    title: "You are here!"
+  });
+  </script>
 </div>
