color switch to red. Fixed map

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -61,7 +61,7 @@ title: AirBnB Clone
       <div class="col-md-4">
         <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-london.jpeg'); background-size: cover">
           <span>London</span>
-          <img src="images/romain.jpeg" class="avatar" alt="">
+          <img src="images/romain.jpg" class="avatar" alt="">
           <h3>Romain's home</h3>
           <p>Nice flat in Piccadilly</p>
         </div>
