--- a/source/stylesheets/components/_avatar.scss
+++ b/source/stylesheets/components/_avatar.scss
@@ -2,6 +2,10 @@
   width: 30px;
   border-radius: 50%;
 }
+.avatar-small {
+  width: 70px;
+  border-radius: 50%;
+}
 .avatar-large {
   width: 150px;
   border-radius: 50%;
