--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -22,21 +22,21 @@
   color: white;
   opacity: 1;
 }
-.card span {
+.card-category {
   position: absolute;
   top: 10px;
   left: 10px;
   font-size: 20px;
 }
 
-.card h3 {
+.card-description h2 {
   position: absolute;
   font-size: 25px;
   bottom: 30px;
   left: 10px;
 }
 
-.card p {
+.card-description p {
   position: absolute;
   bottom: 10px;
   left: 10px;
@@ -46,4 +46,12 @@
   position: absolute;
   top: 10px;
   right: 10px;
+}
+
+.card-link {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
 }
